--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,6 +51,13 @@ a {
   max-width: 200px;
 }
 
+.insta-post {
+  aspect-ratio: 1 / 1;
+  width: 200px;
+  min-width: 200px;
+  max-width: 200px;
+}
+
 :hover::-webkit-scrollbar-thumb {
   visibility:visible;
 }
